# kafkify

./: .gitignore  .justfile  .pre-commit-config.yaml  404.html  README.md  docker-compose.yaml  index.html  locustfile.py  main_consumer.py  main_producer.py  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: ci-checks.yml  ci.yml
config/: default.yaml  development.yaml
consumer/: index.html
consumers/: basic_consumer.py
docs/: consumer.md  index.md  producer.md
docs/examples/: consumer.md  producer.md
examples/consumer/: index.html
examples/producer/: index.html
producer/: index.html
producers/: basic_producer.py
search/: search_index.json
src/consumers/: router.py
src/consumers/domain/ports/: base_consumer.py
src/consumers/infrastructure/adapters/: base_consumer_adapter.py  base_rebalance_listener.py
src/consumers/infrastructure/config/: consumer_settings.py
src/examples/consumer_example/: main.py
src/examples/consumer_example/entrypoints/api/routers/events/: people_event.py  purchase_event.py  router.py
src/examples/producer_example/: main.py
src/examples/producer_example/domain/: person.py
src/examples/producer_example/entrypoints/api/: dependencies.py
src/examples/producer_example/entrypoints/api/routers/: person_notifier_service.py
src/producers/domain/ports/: base_producer.py  producer.py
src/producers/infrastructure/adapters/: base_producer_adapter.py
src/producers/infrastructure/config/: producer_settings.py
src/utils/: access_config.py  deserializers.py  logging.py  serializers.py
utils/: logging.py
