[project]
name = "kafkify"
version = "0.1.0"
description = "A useful library for quick Kafka implementation in Python"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiokafka>=0.13.0",
    "faker>=37.12.0",
    "fastapi>=0.118.2",
    "fastavro>=1.12.1",
    "locust>=2.43.1",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.1",
    "mkdocstrings[python]>=1.0.3",
    "pydash>=8.0.5",
    "python-json-logger>=4.0.0",
    "pyyaml>=6.0.3",
    "uvicorn>=0.37.0",
]
